--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,23 @@
 body
 {
     background-color: aqua;
+    margin: 0px;
+}
+
+.chatbox{
+    background-color: white;
+    width: 100%;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+.user-input{
+    width: 100%;
+    border: none;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+.chatbox-container{
+    width: 50%;
 }
